# cerida

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_SP1.md  Cargo.toml  Dockerfile  EXPLANATION.md  HANDOFF.md  LICENSE  Makefile  PHASE2_PLAN.md  PRIVACY_PLAN.md  README.md  RESEARCH.md  ROADMAP.md  SESSION_SUMMARY.md  cloudbuild-keepers-2.yaml  cloudbuild-keepers.yaml  cloudbuild-tee-2.yaml  cloudbuild-tee.yaml  orderbook.ipynb  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: .env.example  .gitignore  package-lock.json  package.json  vercel.json  vite.config.ts
app/api/: [...tee].ts
app/app/: app.css  root.tsx  routes.ts
app/app/components/toast/: toast-card.tsx  toast-container.tsx  toast-context.tsx
app/app/components/trade/: footprint-chart.tsx  format.ts  market-bar.tsx  market-stats.tsx  onboarding-modal.tsx  order-book.tsx  portfolio-page.tsx  positions-panel.tsx  price-chart.tsx  settings-modal.tsx  shielded-pool-modal.tsx  sidebar.tsx  trades-tape.tsx  trading-panel.tsx
app/app/context/: levels-context.tsx  market-context.tsx  nav-context.tsx  price-select-context.tsx  settings-context.tsx  theme-context.tsx  wallet-context.tsx
app/app/lib/: contracts.ts  positions-store.ts  pyth.ts  tee-client.ts
app/app/routes/: docs.tsx  flow.tsx  home.tsx
app/app/routes/trade/: index.tsx  route.tsx
app/public/: robots.txt  sitemap.xml  tradingview-theme.css
audit/: audit.md  threat-model.md
circuits/: Makefile
circuits/keys/: benchmark-cache.json  note_spend_vk.json  order_cancel_vk.json  order_commitment_vk.json  order_match_vk.json  shielded_insert_vk.json  shielded_withdraw_vk.json
circuits/src/: comparators.circom  order_cancel.circom  order_commitment.circom  order_match.circom
circuits/src/poseidon2/: poseidon2_compress.circom  poseidon2_const.circom
contracts/: Cargo.toml
contracts/collateral/: Cargo.toml
contracts/collateral/src/: lib.rs
contracts/orderbook/: Cargo.toml  build.rs
contracts/orderbook/src/: lib.rs
contracts/perp-engine/: Cargo.toml  build.rs
contracts/perp-engine/src/: lib.rs
contracts/shielded-pool/: Cargo.toml  build.rs
contracts/shielded-pool/src/: lib.rs
contracts/types/: Cargo.toml
contracts/types/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier-groth16/: Cargo.toml  build.rs
contracts/verifier-groth16/src/: lib.rs
contracts/verifier/src/: lib.rs
crates/ultrahonk-soroban-verifier/: Cargo.toml
crates/ultrahonk-soroban-verifier/src/: debug.rs  ec.rs  field.rs  hash.rs  lib.rs  relations.rs  shplemini.rs  sumcheck.rs  transcript.rs  types.rs  utils.rs  verifier.rs
deployments/testnet/: e2e_output.json
design/: gcp-tee-hardening.md
examples/tee-zk-stellar/: .env.example
examples/tee-zk-stellar/circuit/: Nargo.toml
examples/tee-zk-stellar/client/: package.json
examples/tee-zk-stellar/contract/: Cargo.toml
examples/tee-zk-stellar/contract/src/: lib.rs
examples/tee-zk-stellar/scripts/: deploy.sh
examples/tee-zk-stellar/tee-prover/: .dockerignore  package.json
examples/tee-zk-stellar/tee-prover/src/: crypto.ts  enclave.ts  index.ts  types.ts
infra/: Dockerfile  README.md  deploy-testnet.sh  deploy.sh  test-tee-local.sh
keepers/: Cargo.toml  Dockerfile  deploy.sh  entrypoint.sh
keepers/src/: main.rs  market_maker.rs  oracle.rs
tee-zk-stellar/: Makefile  README.md  docker-compose.yml
tee-zk-stellar/circuit/src/: main.nr
tee-zk-stellar/client/src/: demo.ts
tee-zk-stellar/scripts/: test.sh
tee-zk-stellar/tee-prover/: Dockerfile
tee-zk-stellar/tee-prover/src/: prover.ts
tiny/: .gitignore  Cargo.toml  Makefile
tiny/circuits/src/: main.circom
tiny/circuits/src/poseidon2/: poseidon2_hash.circom  poseidon2_perm.circom
tiny/client/: package-lock.json  package.json  tsconfig.json
tiny/client/src/: e2e.test.ts  e2e.ts
tiny/contracts/pool/: Cargo.toml  build.rs
tiny/contracts/pool/src/: lib.rs
tiny/contracts/pool/test_snapshots/test/: test_duplicate_deposit_rejected.1.json
tiny/contracts/soroban-utils/: Cargo.toml
tiny/contracts/soroban-utils/src/: lib.rs  poseidon2.rs
tiny/contracts/types/: Cargo.toml
tiny/contracts/types/src/: lib.rs
tiny/contracts/verifier/: Cargo.toml
tiny/contracts/verifier/src/: lib.rs
tiny/deployments/testnet/: deployments.json  e2e_output.json
tiny/e2e/: Cargo.toml
tiny/e2e/src/: main.rs  proof.rs  stellar.rs
tiny/scripts/: deploy.sh
tiny/sp1-prover/: Cargo.toml  vk.json
tiny/sp1-prover/elf/: private-payment-sp1
tiny/sp1-prover/guest/: Cargo.toml
tiny/sp1-prover/guest/src/: main.rs
tiny/sp1-prover/host/: Cargo.toml
tiny/sp1-prover/host/src/: main.rs
tools/book/: Cargo.toml
tools/book/src/: main.rs
tools/e2e/: Cargo.toml
tools/e2e/src/: benchmark.rs  client.rs  lib.rs  main.rs  proof.rs  soroban_rpc.rs  stellar.rs
tools/e2e/tests/: gcp_proof_check.rs
tools/prover/: Cargo.toml
tools/prover/src/: main.rs
tools/rust-circuits/: Cargo.toml
tools/rust-circuits/src/: lib.rs  main.rs  poseidon2.rs
tools/rust-circuits/src/circuits/: cancel.rs  commitment.rs  match_circuit.rs  mod.rs  note_spend.rs  shielded_insert.rs  shielded_withdraw.rs
tools/tee-match/: Cargo.toml
tools/tee-match/src/: attestation.rs  crypto.rs  db.rs  engine.rs  funding.rs  kms.rs  liquidator.rs  log.rs  main.rs  position.rs  proof.rs  serve.rs  stellar.rs  tpsl.rs
tools/zkey-extract/: Cargo.toml
tools/zkey-extract/src/: main.rs
