[workspace]
[package]
name = "keepers"
version = "0.1.0"
edition = "2021"

[dependencies]
e2e = { path = "../tools/e2e" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"
rand = "0.8"
