[package]
name = "perp-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "27.0.0-rc.1", default-features = false, features = ["alloc"] }
types = { path = "../types" }

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", default-features = false, features = ["testutils"] }
rust-circuits = { path = "../../tools/rust-circuits" }
ark-bn254 = "0.6"
ark-ff = "0.6"
hex = "0.4"
num-bigint = "0.4"
serde_json = "1"

[build-dependencies]
serde_json = "1"
num-bigint = "0.4"
