[workspace]
[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "=0.4.0"
ark-circom = "=0.1.0"
ark-ff = "=0.4.1"
ark-groth16 = "=0.4.0"
ark-relations = "=0.4.0"
ark-serialize = "=0.4.1"
ark-snark = "=0.4.0"
ark-std = { version = "=0.4.0", features = ["parallel"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
stellar-xdr = { version = "27.0.0", features = ["base64"] }
stellar-strkey = "0.0.13"
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
lazy_static = "1"
