[workspace]
[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[lib]
name = "e2e"
path = "src/lib.rs"

[dependencies]
ark-bn254 = "0.6"
ark-ff = "0.6"
ark-groth16 = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
stellar-xdr = { version = "27.0.0", features = ["base64"] }
stellar-strkey = "0.0.13"
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
lazy_static = "1"
rust-circuits = { path = "../rust-circuits" }
