[workspace]
[package]
name = "rust-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-r1cs-std = "0.6"
ark-relations = "0.6"
ark-ff = "0.6"
ark-ec = "0.6"
ark-bn254 = "0.6"
ark-groth16 = "0.6"
ark-poly = "0.6"
ark-serialize = "0.6"
ark-std = { version = "0.6", features = ["parallel"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
num-bigint = "0.4"

[dev-dependencies]
ark-snark = "0.6"
