[workspace]
[package]
name = "tee-match"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.6"
ark-ff = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
rand = "0.8"
rust-circuits = { path = "../rust-circuits" }
