[workspace]
[package]
name = "tee-match"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.6"
ark-ff = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
rand = "0.8"
rust-circuits = { path = "../rust-circuits" }
e2e = { path = "../e2e" }
stellar-xdr = { version = "27.0.0", features = ["base64"] }
ed25519-dalek = "2"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
lazy_static = "1"

# Secure mode (attestation, encryption, HTTP API)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
jsonwebtoken = { version = "9", optional = true }
base64 = { version = "0.22", optional = true }
aes-gcm = { version = "0.10", optional = true }
ring = { version = "0.17", optional = true, features = ["std"] }
zeroize = { version = "1", optional = true, features = ["zeroize_derive"] }

[features]
default = []
secure = [
  "tokio", "axum", "tower-http",
  "jsonwebtoken", "base64",
  "aes-gcm", "ring", "zeroize",
]
