[package]
name = "tiny-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
serde_json = "1"
hex = "0.4"

[dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["alloc"] }
tiny-types = { path = "../types" }

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }
